<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lightbeam"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="clerkie.clerkie_android_coding_challenge.LoginActivity"
    tools:layout_editor_absoluteY="81dp">


    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />


    <TextView
        android:id="@+id/app_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:elevation="0dp"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/button_sign_in"
        android:elevation="0dp"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/oval_blue1"
        android:text="@string/action_sign_in"
        app:layout_constraintBottom_toBottomOf="@+id/login_linear_layout"
        app:layout_constraintEnd_toEndOf="@+id/login_linear_layout"
        app:layout_constraintStart_toStartOf="@+id/login_linear_layout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />




    <LinearLayout
        android:id="@+id/login_linear_layout"
        android:elevation="0dp"
        android:animateLayoutChanges="true"
        android:layout_width="306dp"
        android:layout_height="250dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/oval_white_transparent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name_text_view"
        app:layout_constraintVertical_bias="0.178">
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:elevation="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_person_outline_48dp"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout2"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayout2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/login_linear_layout"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout2" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/login_linear_layout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/login_linear_layout">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in"
            android:imeOptions="actionUnspecified"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/password_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_lock_outline_48dp"
        android:elevation="0dp"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout3"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayout3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/login_linear_layout"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout3" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:elevation="0dp"
        app:layout_constraintEnd_toEndOf="@+id/login_linear_layout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/password_image"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>
























    <ImageView
        android:id="@+id/circle"
        android:elevation="6dp"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.291" />





















    <Button
        android:id="@+id/register_button"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/oval_white"
        android:elevation="2000dp"
        android:text="@string/action_register"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/register_linear_layout"
        app:layout_constraintEnd_toEndOf="@+id/register_linear_layout"
        app:layout_constraintStart_toStartOf="@+id/register_linear_layout"
        app:layout_constraintTop_toBottomOf="@+id/register_password_input" />

    <LinearLayout
        android:id="@+id/register_linear_layout"
        android:layout_width="306dp"
        android:layout_height="300dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:animateLayoutChanges="true"
        android:background="@drawable/oval_blue1"
        android:elevation="1000dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name_text_view"
        app:layout_constraintVertical_bias="0.178"/>

    <ImageView
        android:id="@+id/register_username_image"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_person_outline_48dp"
        android:elevation="1000dp"
        app:layout_constraintBottom_toBottomOf="@+id/register_username_input"
        app:layout_constraintEnd_toStartOf="@+id/register_username_input"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/register_linear_layout"
        app:layout_constraintTop_toTopOf="@+id/register_username_input" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_username_input"
        android:visibility="invisible"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:elevation="1000dp"
        app:layout_constraintBottom_toBottomOf="@+id/register_username_image"
        app:layout_constraintEnd_toEndOf="@+id/register_linear_layout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/register_username_image"
        app:layout_constraintTop_toTopOf="@+id/register_linear_layout">

        <EditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in"
            android:imeOptions="actionUnspecified"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/register_password_image"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_lock_outline_48dp"
        android:elevation="1000dp"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/register_password_input"
        app:layout_constraintEnd_toStartOf="@+id/register_password_input"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/register_linear_layout"
        app:layout_constraintTop_toTopOf="@+id/register_password_input" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_password_input"
        android:visibility="invisible"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:elevation="1000dp"
        app:layout_constraintEnd_toEndOf="@+id/register_linear_layout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/register_password_image"
        app:layout_constraintTop_toBottomOf="@+id/register_username_input">

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>











    <!--<ScrollView-->
        <!--android:id="@+id/login_form"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:visibility="gone">-->

        <!--<LinearLayout-->
            <!--android:id="@+id/email_login_form"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="vertical">-->

            <!--&lt;!&ndash;<android.support.design.widget.TextInputLayout&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_height="wrap_content">&ndash;&gt;-->

                <!--&lt;!&ndash;<AutoCompleteTextView&ndash;&gt;-->
                    <!--&lt;!&ndash;android:id="@+id/email"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:hint="@string/prompt_email"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:inputType="textEmailAddress"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:maxLines="1"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:singleLine="true" />&ndash;&gt;-->

            <!--&lt;!&ndash;</android.support.design.widget.TextInputLayout>&ndash;&gt;-->

            <!--&lt;!&ndash;<android.support.design.widget.TextInputLayout&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_height="wrap_content">&ndash;&gt;-->

                <!--&lt;!&ndash;<EditText&ndash;&gt;-->
                    <!--&lt;!&ndash;android:id="@+id/password"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:hint="@string/prompt_password"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:imeActionId="6"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:imeActionLabel="@string/action_sign_in"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:imeOptions="actionUnspecified"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:inputType="textPassword"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:maxLines="1"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:singleLine="true" />&ndash;&gt;-->

            <!--&lt;!&ndash;</android.support.design.widget.TextInputLayout>&ndash;&gt;-->

            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:visibility="gone">-->

                <!--<EditText-->
                    <!--android:id="@+id/password_check"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:hint="@string/prompt_password"-->
                    <!--android:imeActionId="6"-->
                    <!--android:imeActionLabel="@string/action_sign_in"-->
                    <!--android:imeOptions="actionUnspecified"-->
                    <!--android:inputType="textPassword"-->
                    <!--android:maxLines="1"-->
                    <!--android:singleLine="true" />-->

            <!--</android.support.design.widget.TextInputLayout>-->

            <!--&lt;!&ndash;<Button&ndash;&gt;-->
                <!--&lt;!&ndash;android:id="@+id/button_sign_in"&ndash;&gt;-->
                <!--&lt;!&ndash;style="?android:textAppearanceSmall"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_marginTop="16dp"&ndash;&gt;-->
                <!--&lt;!&ndash;android:text="@string/action_sign_in"&ndash;&gt;-->
                <!--&lt;!&ndash;android:textStyle="bold" />&ndash;&gt;-->

            <!--<Button-->
                <!--android:id="@+id/button_register"-->
                <!--style="?android:textAppearanceSmall"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="16dp"-->
                <!--android:text="@string/action_register"-->
                <!--android:textStyle="bold" />-->

        <!--</LinearLayout>-->
    <!--</ScrollView>-->

</android.support.constraint.ConstraintLayout>
